# nyt_mcp

./: .env.sample  .gitignore  README.md  pyproject.toml  pytest.ini  sample_response.json
src/mcp_server/: __init__.py  server.py  weather.py
tests/: README.md  __init__.py  test_article_search.py  test_article_search_integration.py  test_search_result.json
